@@ -16,6 +16,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #9284: Allow inspect.findsource() to find the source of doctest
+  functions.
+
 - Issue #10694: zipfile now ignores garbage at the end of a zipfile.
 
 - Issue #11583: Speed up os.path.isdir on Windows by using GetFileAttributes
